<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">UCIProxy 1.2</string>
    <string name="description">Android ntlm proxy</string>
    <string name="action_settings">Settings</string>
    <string name="user">User</string>
    <string name="blank"></string>
    <string name="Username">Username</string>
    <string name="Password">Password</string>
    <string name="ShowPassword">Show password</string>
    <string name="Domain">Domain</string>
    <string name="Server">Server</string>
    <string name="InputPort">Input Port</string>
    <string name="OutputPort">Output Port</string>
    <string name="domainHint">uci.cu</string>
    <string name="serverHint">10.0.0.1</string>
    <string name="portHint">8080</string>
    <string name="run">run</string>
    <string name="stop">stop</string>
    <string name="notif1">UCIProxy is running…</string>
    <string name="notif2">Running UCIProxy for user: </string>
    <string name="notif3">UCIProxy was stopped…</string>
    <string name="AdvancedOptions">Advanced Options</string>
    <string name="passwordHint">Password</string>
    <string name="started">UCIProxy started</string>
    <string name="stopped">UCIProxy stopped</string>
    <string name="nodata">There is no enough data to start the service</string>
    <string name="Bypass">Bypass proxy for</string>
    <string name="BypassHint">127.0.0.1,localhost,*uci.cu</string>
    <string name="OnProxy">Configuring WiFi for Proxy use</string>
    <string name="OnNoProxy">Configuring WiFi for No Proxy use</string>
    <string name="Connected">Connected to WiFi</string>
    <string name="GlobalProxy">Set as global proxy</string>
    <string name="Notifications">Notifications</string>
    <string name="delayTime">delay time (min):</string>
    <string name="quotaSpent">% consumed</string>
    <string name="networkError">Network Error</string>
    <string name="spending">Spending</string>
    <string name="credentialsError">Credentials Error</string>
    <string name="progresDialogMessage">Please wait</string>
    <string name="none">None</string>
    <string name="notification">Notification</string>
    <string name="toast">Toast</string>
    <string name="bubbleNotification">Bubble notification</string>
    <string name="theme">App theme:</string>
    <string name="light">Light</string>
    <string name="dark">Dark</string>
    <string name="aboutUs">About us</string>
    <string name="createdBy">Created by:</string>
    <string name="setGlobalProxyConfiguration">Set Global Proxy Configuration</string>
    <string name="notFunctional">This function is not supported for your mobile</string>
    <string name="wifiSettings">Wi-fi Settings</string>
    <string name="wifiSettingsText">In order to set up the Wi-fi proxy, do it as follows:</string>
    <string name="wifiSettingsCheck">Don\'t show again</string>
    <string name="wifiSettingsPositiveButton">Go to Wi-fi settings</string>
    <string name="wifiSettingsNegativeButton">Cancel</string>
    <string name="bubbleNotificationRunning">Bubble Notification Running</string>
    <string name="authQuotaServiceUse">Use quota and authentication services</string>
</resources>