<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/activity_horizontal_margin">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <CheckBox
                android:id="@+id/globCheckBox"
                android:textSize="@dimen/text_size"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/GlobalProxy"/>

            <TextView
                android:id="@+id/DomainTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/globCheckBox"
                android:textSize="@dimen/text_size"
                android:text="@string/Domain" />

            <EditText
                android:id="@+id/edomain"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/DomainTextView"
                android:ems="10"
                android:textSize="@dimen/text_size"
                android:hint="@string/domainHint" />

            <TextView
                android:id="@+id/ServerTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/DomainTextView"
                android:layout_alignStart="@+id/DomainTextView"
                android:layout_below="@+id/DomainTextView"
                android:layout_marginTop="42dp"
                android:textSize="@dimen/text_size"
                android:text="@string/Server" />

            <EditText
                android:id="@+id/eserver"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignEnd="@+id/edomain"
                android:layout_alignLeft="@+id/edomain"
                android:layout_alignRight="@+id/edomain"
                android:layout_alignStart="@+id/edomain"
                android:layout_below="@+id/ServerTextView"
                android:ems="10"
                android:textSize="@dimen/text_size"
                android:hint="@string/serverHint" />

            <TextView
                android:id="@+id/InputPortTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/DomainTextView"
                android:layout_alignStart="@+id/DomainTextView"
                android:layout_below="@+id/eserver"
                android:textSize="@dimen/text_size"
                android:text="@string/InputPort" />

            <EditText
                android:id="@+id/einputport"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignEnd="@+id/edomain"
                android:layout_alignLeft="@+id/edomain"
                android:layout_alignRight="@+id/edomain"
                android:layout_alignStart="@+id/edomain"
                android:layout_below="@+id/InputPortTextView"
                android:ems="10"
                android:hint="@string/portHint"
                android:textSize="@dimen/text_size"
                android:inputType="numberSigned" />

            <TextView
                android:id="@+id/OutputPortTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/DomainTextView"
                android:layout_alignStart="@+id/DomainTextView"
                android:layout_below="@+id/einputport"
                android:textSize="@dimen/text_size"
                android:text="@string/OutputPort" />

            <EditText
                android:id="@+id/eoutputport"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignEnd="@+id/edomain"
                android:layout_alignLeft="@+id/edomain"
                android:layout_alignRight="@+id/edomain"
                android:layout_alignStart="@+id/edomain"
                android:layout_below="@+id/OutputPortTextView"
                android:ems="10"
                android:hint="@string/portHint"
                android:textSize="@dimen/text_size"
                android:inputType="numberSigned" />


            <TextView
                android:id="@+id/BypassTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/DomainTextView"
                android:layout_alignStart="@+id/DomainTextView"
                android:layout_below="@+id/eoutputport"
                android:textSize="@dimen/text_size"
                android:text="@string/Bypass" />

            <EditText
                android:id="@+id/ebypass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignEnd="@+id/edomain"
                android:layout_alignLeft="@+id/edomain"
                android:layout_alignRight="@+id/edomain"
                android:layout_alignStart="@+id/edomain"
                android:layout_below="@+id/BypassTextView"
                android:ems="10"
                android:textSize="@dimen/text_size"
                android:hint="@string/BypassHint" />

            <LinearLayout
                android:id="@+id/styleLayout"
                android:layout_below="@+id/ebypass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp">

                <TextView
                    android:id="@+id/appTheme"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/theme"
                    android:textSize="@dimen/text_size" />

                <Spinner
                    android:id="@+id/spinnerTheme"
                    android:layout_marginLeft="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/text_size" />

            </LinearLayout>

            <CheckBox
                android:id="@+id/sAuthQuotaCheck"
                android:layout_below="@+id/styleLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_size"
                android:text="@string/authQuotaServiceUse"/>
        </RelativeLayout>

    </ScrollView>

</LinearLayout>