<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/activity_vertical_margin">

    <LinearLayout
        android:id="@+id/line1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/delaytextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delayTime"
            android:textSize="@dimen/text_size" />

        <EditText
            android:id="@+id/notificationDelay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="7dp"
            android:ems="10"
            android:inputType="number"
            android:text="1"
            android:textSize="@dimen/text_size" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/line1"
        android:orientation="vertical">

        <CheckBox
            android:id="@+id/toastCheck"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/toast"
            android:textSize="@dimen/text_size" />

        <CheckBox
            android:id="@+id/notificationCheck"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/notification"
            android:textSize="@dimen/text_size" />

        <CheckBox
            android:id="@+id/bubbleCheck"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/bubbleNotification"
            android:textSize="@dimen/text_size" />

    </LinearLayout>
</RelativeLayout>