<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/tLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/activity_vertical_margin">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <ImageView
                android:id="@+id/userLogo"
                android:layout_width="65dp"
                android:layout_height="65dp"
                android:layout_alignParentTop="true"
                android:src="@drawable/no_photo" />

            <TextView
                android:id="@+id/nameTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/userLogo"
                android:layout_marginBottom="20dp"
                android:layout_marginLeft="@dimen/activity_vertical_margin"
                android:layout_toEndOf="@+id/userLogo"
                android:layout_toRightOf="@+id/userLogo"
                android:gravity=""
                android:textSize="@dimen/text_size"
                android:text="@string/none" />


            <EditText
                android:id="@+id/euser"
                android:textSize="@dimen/text_size"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/userLogo"
                android:layout_marginTop="5dp"
                android:ems="10"
                android:hint="@string/Username"
                android:text="@string/blank" />

            <!--<requestFocus />-->

            <EditText
                android:id="@+id/epass"
                android:textSize="@dimen/text_size"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/euser"
                android:layout_marginTop="5dp"
                android:ems="10"
                android:hint="@string/passwordHint"
                android:inputType="textPassword" />

            <uci.uciproxy.ui.ui.fontAwesome.ButtonAwesome
                android:id="@+id/buttonClean"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_below="@id/epass"
                android:text="@string/fa_eraser"/>
            <CheckBox
                android:id="@+id/checkBoxPass"
                android:textSize="@dimen/text_size"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/buttonClean"
                android:layout_marginTop="5dp"
                android:onClick="clickShowPassword"
                android:text="@string/ShowPassword" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/checkBoxPass"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/quotaStateTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="--"
                    android:textSize="@dimen/quota_state_text_size" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"
                    android:text="/"
                    android:textSize="@dimen/quota_state_text_size" />

                <TextView
                    android:id="@+id/assignedQuotaTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"
                    android:text="--"
                    android:textSize="@dimen/quota_state_text_size" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"
                    android:text="MB"
                    android:textSize="@dimen/quota_state_text_size" />

            </LinearLayout>


        </RelativeLayout>

    </ScrollView>

</RelativeLayout>